--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
       <a class="link" href="https://" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>Sc Bot v1.0.0
+        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (full release)
+      </a>
+      <a class="link" href="https://" target="_blank">
+        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (beta)
       </a>
     </div>
 
