--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div id="links">
-      <a class="link" href="https://youtube.com" target="_blank">
+      <a class="link" href="https://www.youtube.com/@RyuuWannXD" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i>Youtube
       </a>
       <a class="link" href="https://wa.me/+6283830939695" target="_blank">
@@ -62,10 +62,10 @@
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
       <a class="link" href="https://" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (full release)
+        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (fullUpdate)
       </a>
       <a class="link" href="https://" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (beta)
+        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (betaTester)
       </a>
     </div>
 
