--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <a class="link" href="https://www.instagram.com/wan_superman1002" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
-      <a class="link" href="https://" target="_blank">
+      <a class="link" href="https://pastebin.com/raw/0KEnRcah" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (fullUpdate)
       </a>
-      <a class="link" href="https://" target="_blank">
+      <a class="link" href="https://pastebin.com/raw/0KEnRcah" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (betaTester)
       </a>
     </div>
