--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
       <a class="link" href="https://pastebin.com/raw/0KEnRcah" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (fullUpdate)
+        <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (Official)
       </a>
       <a class="link" href="https://pastebin.com/raw/0KEnRcah" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>SuYang-MD (betaTester)
