--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 
     <div id="hashtag">
       #Long Journey Without Returning.
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    
+    <div id="copyp">
+      ©Copyright | RyuuWannXD
     </div>
   </body>
 </html>
