--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="https://telegra.ph/file/c15f0dcb5e1eb324804b4.jpg" target="_blank">
-            <img src="https://telegra.ph/file/c15f0dcb5e1eb324804b4.jpg" alt="Profile Picture">
+          <a href="https://telegra.ph/file/85bedb9e5f26ef2ac3d31.gif" target="_blank">
+            <img src="https://telegra.ph/file/85bedb9e5f26ef2ac3d31.gif" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
