--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://telegra.ph/file/c15f0dcb5e1eb324804b4.jpg" alt="Profile Picture">
+      <img src="https://telegra.ph/file/85bedb9e5f26ef2ac3d31.gif" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
