--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <div id="userName">
       @RyuuWannXD
     </div>
-
+    <div class="kkk">
+  <a href="https://github.com/RyuuWannXD"><img src="http://readme-typing-svg.herokuapp.com?color=FFFFFF&center=true&vCenter=true&multiline=false&lines=RyuuWannXD;Follow+My+Github" alt="ʘᴗʘ">
+    </div>
     <div id="links">
       <a class="link" href="https://www.youtube.com/@RyuuWannXD" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i>Youtube
