--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="userName">
       @RyuuWannXD
     </div>
-    <div class="kkk">
+    <div id="kkk">
   <a href="https://github.com/RyuuWannXD"><img src="http://readme-typing-svg.herokuapp.com?color=FFFFFF&center=true&vCenter=true&multiline=false&lines=RyuuWannXD;Follow+My+Github" alt="ʘᴗʘ">
     </div>
     <div id="links">
