--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       @RyuuWannXD
     </div>
     <div id="kkk">
-  <a href="https://github.com/RyuuWannXD"><img src="http://readme-typing-svg.herokuapp.com?color=FFFFFF&center=true&vCenter=true&multiline=false&lines=RyuuWannXD;Follow+My+Github" alt="ʘᴗʘ">
+  <a href="https://github.com/RyuuWannXD"><img src="http://readme-typing-svg.herokuapp.com?color=FFFFFF&center=true&vCenter=true&multiline=false&lines=Ini+Bio+Saya" alt="ʘᴗʘ">
     </div>
     <div id="links">
       <a class="link" href="https://www.youtube.com/@RyuuWannXD" target="_blank">
